[gd_scene load_steps=3 format=3]

[ext_resource type="LabelSettings" uid="uid://bkyixyciqmq2n" path="res://gui/res/item_label_settings.tres" id="1_7r62e"]
[ext_resource type="Script" path="res://gui/inv/equip_list_item.gd" id="1_m5uyx"]

[node name="MarginContainer" type="MarginContainer"]
offset_right = 576.0
offset_bottom = 68.0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
script = ExtResource("1_m5uyx")

[node name="Button" type="Button" parent="."]
layout_mode = 2
toggle_mode = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="LabelType" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Weapon"
clip_text = true
text_overrun_behavior = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="LabelName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Item Name"
label_settings = ExtResource("1_7r62e")

[node name="LabelLevel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Lv100"
label_settings = ExtResource("1_7r62e")
